# kaksic

./: .gitignore  Cargo.toml  build.rs  justfile
assets/: fens.txt
benches/: perf.rs
src/: lib.rs  main.rs
src/bot/: controller.rs  input.rs  mod.rs
src/search/: eval.rs  mod.rs  negamax.rs
