[package]
name = "chessbot-starterkit"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.42"
crossbeam-channel = "0.5.15"
rand = "0.10.0"
shakmaty = "0.30.0"
shakmaty-uci = { version = "0.1.2" , git = "https://gitlab.com/Emilostuff/shakmaty-uci"}

[build-dependencies]
shakmaty = "0.30.0"

[dev-dependencies]
criterion = { version = "0.8.2", features = ["html_reports"] }

[[bench]]
name = "perf"
harness = false
